--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^5.3.0",
     "electron": "^10.1.1",
     "electron-builder": "^22.8.0",
+    "electron-is-dev": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
