--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-split-pane": "^0.1.92",
     "wait-on": "^5.2.0"
   },
   "scripts": {
