--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,12 @@
     "electron-is-dev": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-latex": "^2.0.0",
+    "react-markdown": "^4.3.1",
+    "react-mathjax": "^1.0.1",
     "react-scripts": "3.4.3",
     "react-split-pane": "^0.1.92",
+    "remark-math": "^3.0.1",
     "wait-on": "^5.2.0"
   },
   "scripts": {
